-------------------------------------------------
DIISIS 0.6.1 2025-09-04
Oopsie it's the patch for a few small things

General
- Make a few functions private

Editor
- Fix a bug in the LineReader find function where it'd add a triple "/"
- Add HTML entity support (stuff like &lt;)
- click on a fact item to go to its declaration in facts
- some window ordering fixes

Runtime
- Improved an error message in LineReader
- made LineReader.body_label_function_funnel skip tags

-------------------------------------------------
DIISIS 0.6 2025-09-03
This shit breaks compatibility on so many levels! Might as well be a new plugin! Also includes LONER_DOG additions :3

General
- Introduce text IDs
- Change to Godot 4.4.1
- option to delete dropdowns
- add ability to skip individual lines and entire pages
- clean up documentation, especially LineReader and ParserEvents
- fixes all around
- automatically check for updates (can be disabled in Project Settings)
- Refactor the entire instruction system
- InstructionHandler is gone
- numerous bug fixes
- better performance
- text export
- text import
- rubies
- LineReaderActorConfig as a new resource!

Editor
- Add text ingestion (raw text ingestion into text boxes and files at large)
- instructions:
	- add default args
	- dropdown arg limiters
- Option for Save on Play (true by default)
- Visual overhaul
	- General layout improvements & slimmification
	- Change editor fonts
	- Add option to collapse Conditionals
	- choice item views
	- incoming page refs
- fact deletion warning (if a page, line, or choice item contains a fact, this warns you of it. can be disabled in preferences)
- add editor menu
	- step through pages
	- editor reload
- Add option to be silly
- Add several windows
	- add actor search utility
	- Incoming references window for Jump Page/Loopback
	- add "fix punctuation" text option. Includes:
		- period toggle
		- apostrophes toggle
		- replacement rules
- more bbcode in hinting